--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="./vendor/swipe.js" type="text/javascript"></script>
     <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
   </head>
-  <body class='backpack'>
+  <body class='backpack tk-proxima-nova-alt'>
 
       <aside id='sidebar'>
         <a href='#' class='logo'><img src='./assets/img/backpack-icon.png' height='70' /></a>
@@ -826,6 +826,5 @@ cake watch:js       # Recompile CoffeeScript source files when
             });
       });
     </script>
-
   </body>
 </html>
